# id3-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  generate-completions.sh  test.sh
.github/workflows/: test.yaml
cli/: completions.rs  id3.rs
exports/: completion.bash  completion.elv  completion.fish  completion.ps1  completion.zsh
src/: app.rs  args.rs  backup.rs  comment.rs  error.rs  lib.rs  run.rs  text_data.rs  text_format.rs  utils.rs
src/app/: backup.rs  delete.rs  field.rs  get.rs  picture_type.rs  set.rs  view.rs
src/args/: field.rs  text_format.rs  view.rs
src/text_data/: picture.rs  picture_type.rs
tests/: _utils.rs  backup.rs  completions.rs  delete_all.rs  delete_comment.rs  delete_picture.rs  delete_text.rs  get.rs  get_comment.rs  get_picture.rs  get_text.rs  set_comment.rs  set_picture.rs  set_text.rs  successful_get.rs
