[package]
name = "id3-cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
include = [
  "/src",
  "/cli",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "id3_cli"
path = "src/lib.rs"

[[bin]]
name = "id3"
path = "cli/id3.rs"

[dependencies]
id3 = "1.2.0"
mediatype = "0.19.3"
infer = "0.9.0"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.2"
chrono = "0.4.19"
sha2 = "0.10.2"
thiserror = "1.0.31"
derive_more = "0.99.17"
typed-builder = "0.10.0"
pipe-trait = "0.4.0"

[dev-dependencies]
command-extra = "1.0.0"
text-block-macros = "0.1.1"
pretty_assertions = "1.2.1"
tempfile = "3.3.0"
fs_extra = "1.2.0"
assert-cmp = "0.2.0"
