[package]
name = "id3-cli"
description = "View and modify IDv3 tags"
version = "0.2.1"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["id3", "tag", "audio", "mp3"]
categories = ["command-line-utilities"]
repository = "https://github.com/KSXGitHub/id3-cli.git"
include = [
  "/src",
  "/cli",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "id3_cli"
path = "src/lib.rs"

[[bin]]
name = "id3"
path = "cli/id3.rs"

[[bin]]
name = "id3-cli-completions"
path = "cli/completions.rs"

[dependencies]
id3 = "1.6.0"
mediatype = "0.19.13"
infer = "0.12.0"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "3.2.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.19"
chrono = "0.4.20"
sha2 = "0.10.2"
thiserror = "1.0.36"
derive_more = "0.99.17"
typed-builder = "0.13.0"
pipe-trait = "0.4.0"
clap-utilities = "0.1.0"

[dev-dependencies]
command-extra = "1.0.0"
text-block-macros = "0.1.1"
pretty_assertions = "1.2.1"
tempfile = "3.3.0"
fs_extra = "1.3.0"
assert-cmp = "0.2.0"
